go-web-app-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  namespace: golang-webapp
spec:
  selector:
    app: gowebapp-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
